# bagscolor

./: BagsColor.cc  BagsColor.h  CMakeLists.txt  Image.cc  Image.h  Img2Html.cc  Img2Html.h  README.md  demo.cc
data/: descr_bags_clutch_100.txt  descr_bags_clutch_101.txt  descr_bags_clutch_103.txt  descr_bags_clutch_11.txt  descr_bags_clutch_111.txt  descr_bags_clutch_112.txt  descr_bags_clutch_114.txt  descr_bags_clutch_116.txt  descr_bags_clutch_117.txt  descr_bags_clutch_119.txt  descr_bags_clutch_121.txt  descr_bags_clutch_126.txt  descr_bags_clutch_131.txt  descr_bags_clutch_132.txt  descr_bags_clutch_138.txt  descr_bags_clutch_139.txt  descr_bags_clutch_140.txt  descr_bags_clutch_144.txt  descr_bags_clutch_145.txt  descr_bags_clutch_148.txt  descr_bags_clutch_149.txt  descr_bags_clutch_15.txt  descr_bags_clutch_166.txt  descr_bags_clutch_17.txt  descr_bags_clutch_170.txt  descr_bags_clutch_172.txt  descr_bags_clutch_174.txt  descr_bags_clutch_176.txt  descr_bags_clutch_18.txt  descr_bags_clutch_180.txt  descr_bags_clutch_181.txt  descr_bags_clutch_188.txt  descr_bags_clutch_19.txt  descr_bags_clutch_192.txt  descr_bags_clutch_195.txt  descr_bags_clutch_198.txt  descr_bags_clutch_2.txt  descr_bags_clutch_202.txt  descr_bags_clutch_204.txt  descr_bags_clutch_205.txt  (+1792 more)
results/: LINEAR.html  RBF.html
results/bags/: descr_bags_clutch_1.txt  descr_bags_clutch_102.txt  descr_bags_clutch_104.txt  descr_bags_clutch_105.txt  descr_bags_clutch_113.txt  descr_bags_clutch_115.txt  descr_bags_clutch_125.txt  descr_bags_clutch_13.txt  descr_bags_clutch_133.txt  (+1586 more)
